[gd_scene load_steps=2 format=3 uid="uid://cvmb3p78x728s"]

[ext_resource type="Script" path="res://components/movement_component.gd" id="1_1yt5j"]

[node name="MovementComponent" type="Node"]
script = ExtResource("1_1yt5j")

[node name="StepTimer" type="Timer" parent="."]
one_shot = true

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]

[connection signal="finished" from="AudioStreamPlayer" to="." method="_on_audio_stream_player_finished"]
